--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,13 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+env:
+  global:
+      - PYTHONPATH=.
+      -SECRET_KEY=relapse92
 # command to run tests
 script: 
   - "python Tests.py test"
+
+
   
