--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ python:
 install:
   - pip install -r requirements.txt
 # command to run tests
-script: "python Tests.py test"
+script: "python Tests.py"
   
