--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
 install:
   - pip install -r requirements.txt
 # command to run tests
-script: "python Tests.py"
+script: 
+  - "python Tests.py"
   
