--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install python-coveralls 
 # command to run tests
 script: 
   - "python Tests.py"
+after_success:
+  - coveralls
   
