--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install python-coveralls 
+  - pip install coverage       # Add me to install coverage.py
+  - pip install nose
 # command to run tests
 script: 
   - "python Tests.py"
