--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 # command to run tests
 script: 
   - "python Tests.py"
+  - nosetests --with-coverage
 after_success:
   - coveralls
   
