--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install nose
 # command to run tests
 script: 
-  - "python Tests.py"
+  - "python test_routes.py"
   - nosetests --with-coverage
 after_success:
   - coveralls
